k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servpro-ingress
  namespace: servpro
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.servpro.tn
        - dashboard.servpro.tn
        - api.servpro.tn
        - mobile.servpro.tn
      secretName: servpro-tls
  rules:
    - host: app.servpro.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: app.servpro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: dashboard.servpro.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 5174
    - host: dashboard.servpro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 5174
    - host: api.servpro.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
    - host: api.servpro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
    - host: mobile.servpro.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobile
                port:
                  number: 8081
    - host: mobile.servpro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobile
                port:
                  number: 8081
    - host: mobile.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobile
                port:
                  number: 8081
